--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1868,6 +1868,7 @@ footer {
   background-color: #fff;
   border-top: 1px solid #eee;
   padding: 35px 0 0;
+  background: url("../img/bg-listras.png");
 }
 
 @media (max-width: 420px) {
@@ -1922,18 +1923,3 @@ footer .copyrights {
   margin-left: auto;
   margin-right: auto;
 }
-
-/*----------------------- Widgets ----------------------*/
-
-/***************************** 3- Topics ****************************/
-
-/* = Icons
--------------------------------------------------------------- */
-
-/*
- * Templates Specific Styles
- */
-
-/*
- * Components
- */
